[package]
name = "mdf"
version = "0.1.0"
authors = ["Robin Ole Heinemann <robin.ole.heinemann@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "*"
bitflags = "*"
derivative = "*"
bitvec = "*"
chrono = "*"
encoding_rs = "*"
pretty-hex = "*"
log = "*"
uuid = "*"
serde = "*"

[dev-dependencies]
mtf = { version = "*", path = "../" }
env_logger = "*"
failure = "*"
bincode = "*"
